--- a/src/style/services/beforeafter/cards/cards.scss
+++ b/src/style/services/beforeafter/cards/cards.scss
@@ -37,6 +37,7 @@
                 background-color: transparent;
                 color: #ffffff;
                 font-size: 0.8rem;
+                font-weight: 300;
                 border-radius: 10px;
                 cursor: pointer;
             }
@@ -74,6 +75,7 @@
                 background-color: transparent;
                 color: #ffffff;
                 font-size: 0.8rem;
+                font-weight: 300;
                 border-radius: 10px;
                 cursor: pointer;
             }
@@ -111,6 +113,7 @@
                 background-color: transparent;
                 color: #ffffff;
                 font-size: 0.8rem;
+                font-weight: 300;
                 border-radius: 10px;
                 cursor: pointer;
             }
@@ -148,6 +151,7 @@
                 background-color: transparent;
                 color: #ffffff;
                 font-size: 0.8rem;
+                font-weight: 300;
                 border-radius: 10px;
                 cursor: pointer;
             }
