--- a/src/style/localization/localization.scss
+++ b/src/style/localization/localization.scss
@@ -7,6 +7,7 @@
     h3 {
         color: #000000;
         font-size: 1rem;
+        font-weight: 400;
         margin-top: 2rem;
     }
     .container {
@@ -117,9 +118,10 @@
                 text-align: center;
                 margin: 0 0 2rem 0;
                 p {
-                    margin: 0.5rem 1rem;
+                    margin: 1rem;
                     font-size: 1.5rem;
                     font-weight: 300;
+                    width: 500px;
                 }
             }
         }
@@ -186,6 +188,7 @@
                     margin: 1.5rem 1rem 0 1rem;
                     font-size: 1.5rem;
                     font-weight: 300;
+                    width: 450px;
                 }
             }
         }
