--- a/src/style/services/beforeafter/beforeafter.scss
+++ b/src/style/services/beforeafter/beforeafter.scss
@@ -7,6 +7,7 @@
     h3 {
         color: #e2e2e2;
         font-size: 1rem;
+        font-weight: 400;
         margin-top: 2rem;
         margin-bottom: 5rem;
     }
