--- a/src/style/services/carousel/carousel.scss
+++ b/src/style/services/carousel/carousel.scss
@@ -8,6 +8,7 @@
         h3 {
             color: #000000;
             font-size: 1rem;
+            font-weight: 400;
             margin-top: 2rem;
             margin-bottom: 6rem;
         }
@@ -49,16 +50,14 @@
             }
             p {
                 color: #1f1f1f;
-                font-size: 0.8rem;
+                font-size: 0.7rem;
                 font-weight: 300;
                 text-decoration: none;
                 margin: 0.5rem 0;
             }
             .icon {
                 color: #1f1f1f;
-                font-size: 1rem;
-                border: solid 0.1rem #ffffff;
-                background-color: transparent;
+                font-size: 0.6rem;
                 margin: 0rem;
             }
         }
@@ -120,9 +119,7 @@
                 }
                 .icon {
                     color: #1f1f1f;
-                    font-size: 1rem;
-                    border: solid 0.1rem #ffffff;
-                    background-color: transparent;
+                    font-size: 0.8rem;
                     margin: 0rem;
                 }
             }
@@ -169,8 +166,7 @@
                 }
                 .icon {
                     color: #1f1f1f;
-                    font-size: 1.5rem;
-                    border: solid 0.1rem #ffffff;
+                    font-size: 1.3rem;
                     margin: 0.5rem;
                 }
             }
@@ -205,7 +201,7 @@
                 font-weight: 300;
             }
             .icon {
-                font-size: 1rem;
+                font-size: 0.8rem;
                 margin: 0;
             }
         }
@@ -237,7 +233,7 @@
                 font-weight: 300;
             }
             .icon {
-                font-size: 1.2rem;
+                font-size: 1rem;
                 margin: 0;
 
             }
@@ -271,7 +267,7 @@
                 font-weight: 300;
             }
             .icon {
-                font-size: 1.8rem;
+                font-size: 1.3rem;
                 margin: 0;
 
             }
