--- a/src/style/services/services.scss
+++ b/src/style/services/services.scss
@@ -8,6 +8,7 @@
     h3 {
         color: #000000;
         font-size: 1rem;
+        font-weight: 400;
         margin-top: 2rem;
         margin-bottom: 5rem;
     }
