--- a/src/style/services/services.scss
+++ b/src/style/services/services.scss
@@ -37,6 +37,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                text-decoration: none;
                 img {
                     width: 30px;
                     height: 30px;
@@ -61,6 +62,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            text-decoration: none;
             img {
                 width: 30px;
                 height: 30px;
@@ -85,6 +87,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            text-decoration: none;
             img {
                 width: 30px;
                 height: 30px;
@@ -108,6 +111,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            text-decoration: none;
             img {
                 width: 30px;
                 height: 30px;
@@ -131,6 +135,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            text-decoration: none;
             img {
                 width: 30px;
                 height: 30px;
@@ -154,6 +159,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            text-decoration: none;
             img {
                 width: 45px;
                 height: 30px;
@@ -178,6 +184,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            text-decoration: none;
             img {
                 width: 30px;
                 height: 30px;
@@ -208,9 +215,9 @@
                 height: 60px;
                 h3 {
                     color: #ffffff;
-                    font-size: 1.5rem;
+                    font-size: 1.2rem;
                     font-weight: 300;
-                    margin-top: 1rem;
+                    margin-top: 1.5rem;
                 }
             }
             .nutricao {
@@ -221,6 +228,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                text-decoration: none;
                 img {
                     width: 30px;
                     height: 30px;
@@ -240,6 +248,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                text-decoration: none;
                 img {
                     width: 30px;
                     height: 30px;
@@ -259,6 +268,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                text-decoration: none;
                 img {
                     width: 30px;
                     height: 30px;
@@ -278,6 +288,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                text-decoration: none;
                 img {
                     width: 30px;
                     height: 30px;
@@ -290,6 +301,11 @@
                 }
             }
         }
+    }
+    .pservice  {
+        margin-top: 2rem;
+        font-size: 0.7rem;
+        text-align: center;
     }
 }
 @media (min-width: 481px) and (max-width: 767px) {
