--- a/src/style/navbar/navbar.scss
+++ b/src/style/navbar/navbar.scss
@@ -88,15 +88,17 @@
         .navbar-mobile-menu {
             position: absolute;
             top: 0;
-            display: none;
+            display: block;
             height: 100vh;
             width: 100vw;
             background-color: #00000065;
+            visibility: visible;
+            overflow-y: auto;
             .menu-background {
                 position: absolute;
                 right: 0;
                 height: 650px;
-                width: 260px;
+                width: 75%;
                 background-image: url("../../assets/backgrounds/Backg1.png");
                 border-radius: 0 0 0 20px;
                 .menu-close {
@@ -111,14 +113,16 @@
                 .menu-itens {
                     display: flex;
                     flex-direction: column;
-                    align-items: center;
+                    align-items: flex-start;
                     margin-top: 3rem;
                     li {
                         list-style: none;
-                        margin: 1rem;
+                        margin: 1rem 2rem;
+                        width: calc(100% - 2rem);
+                        border-bottom: solid 0.1rem #a9a9a9;
                         a {
                             color: #000000;
-                            font-size: 24px;
+                            font-size: 1.2rem;
                             text-decoration: none;
                             font-weight: 300;
                         }
@@ -143,7 +147,7 @@
                 }
             }
             .navbar-mobile-menu .menu-background {
-                height: 950px;
+                height: 1200px;
                 width: 480px;
                 border-radius: 0 0 0 20px;
                 .menu-close .menu-close-icon {
@@ -153,7 +157,7 @@
                 .menu-itens {
                     margin-top: 4rem;
                     li {
-                        margin: 1.2rem;
+                        margin: 2rem 2rem;
                         a {
                             font-size: 2.5rem;
                         }
