--- a/src/style/navbar/navbar.scss
+++ b/src/style/navbar/navbar.scss
@@ -92,7 +92,7 @@
             height: 100vh;
             width: 100vw;
             background-color: #00000065;
-            visibility: visible;
+            visibility: hidden;
             overflow-y: auto;
             .menu-background {
                 position: absolute;
