--- a/src/style/beforeafter/beforeafter.scss
+++ b/src/style/beforeafter/beforeafter.scss
@@ -9,13 +9,13 @@
         text-shadow: 1px 1px 1px #000000;
         font-size: 1.5rem;
         font-weight: 300;
-        margin-top: 5rem;
+        margin-top: 8rem;
         margin-bottom: 5rem;
     }
 }
 @media (min-width: 481px) and (max-width: 768px) {
     #beforeAfter {
-        height: 3250px;
+        height: 3400px;
         background-repeat: round;
         h3 {
             font-size: 3rem;
@@ -26,34 +26,34 @@
 }
 @media (min-width: 769px) and (max-width: 1024px) {
     #beforeAfter {
-        height: 1500px;
+        height: 1650px;
         h3 {
             color: #eeeeee;
-            font-size: 1.5rem;
+            font-size: 2.8rem;
             font-weight: 300;
-            margin-top: 8rem;
+            margin: 10rem 0 8rem 0;
         } 
     }
 }
 @media (min-width: 1025px) and (max-width: 1440px) {
     #beforeAfter {
-        height: 1500px;
+        height: 1650px;
         h3 {
             color: #eeeeee;
-            font-size: 1.5rem;
+            font-size: 2.8rem;
             font-weight: 300;
-            margin-top: 8rem;
+            margin: 10rem 0 8rem 0;
         } 
     }
 }
 @media (min-width: 1441px) {
     #beforeAfter {
-        height: 2400px;
+        height: 2450px;
         h3 {
             color: #eeeeee;
-            font-size: 2rem;
+            font-size: 2.8rem;
             font-weight: 300;
-            margin-top: 15rem;
+            margin: 15rem 0 8rem 0;
         } 
     }
 }
