--- a/src/style/contact/contact.scss
+++ b/src/style/contact/contact.scss
@@ -30,7 +30,7 @@
             margin: 0.5rem;
             font-size: 1rem;
             font-weight: 300;
-            width: 160px;
+            max-width: 160px;
             text-align: center;
         }
         button {
@@ -74,30 +74,58 @@
 }
 @media (min-width: 481px) and (max-width: 768px) {
     #contact {
+        background-image: url('../../assets/backgrounds/Beckg2.png');
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 850px;
+        position: relative;
         .contact-image {
             img {
-                width: 480px;
+                width: 400px;
+                margin-top: 5rem;
             }
-            .image-icons a {
-                color: #ffffff;
-                font-size: 2rem;
-                margin: 0.5rem;
-                padding: 0 0.3rem;
+            .image-icons {
+                display: flex;
+                justify-content: center;
+                a {
+                    color: #ffffff;
+                    font-size: 2rem;
+                    padding: 0 0.3rem;
+                }
             }
         }
         .contact-whatsapp {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .whatsapp-text {
+                display: none;
+            }
             p {
+                color: #ffffff;
                 margin: 0.5rem;
-                font-size: 2rem;
-                width: 380px;
+                font-size: 1.5rem;
+                font-weight: 300;
+                max-width: 280px;
+                text-align: center;
             }
             button {
-                border-radius: 30px;
-                width: 9rem;
-                height: 3rem;
-                margin: 1rem;
+                border: solid 0.1rem #ffffff;
+                background-color: transparent;
+                border-radius: 15px;
+                width: 6.5rem;
+                height: 2.5rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-top: 0.5rem;
                 a {
-                    font-size: 1.2rem;
+                    color: #ffffff;
+                    font-size: 1rem;
+                    text-decoration: none;
                     font-weight: 300;
                 }
             }
@@ -109,8 +137,19 @@
             }
         }
         .footer-arrow {
-            margin-top: 6rem;
-            font-size: 2rem;
+            margin-top: 3rem;
+            color: #d7d7d7;
+            font-size: 1rem;
+            -webkit-animation: footer-arrow .70s linear infinite;
+            -moz-animation: footer-arrow .70s linear infinite;
+            -ms-animation: footer-arrow .70s linear infinite;
+            -o-animation: footer-arrow .70s linear infinite;
+            animation: footer-arrow .70s linear infinite;
+        }
+        @keyframes footer-arrow {
+            0% { opacity: 1; }
+            50% { opacity: 0.5; }
+            100% { opacity: 0; }
         }
     }
 }
@@ -120,7 +159,7 @@
         justify-content: space-around;
         height: 600px;
         .contact-image {
-            margin-top: 4rem;
+            margin-top: 2rem;
             img {
                 width: 300px;
                 margin-bottom: 5rem;
@@ -139,15 +178,15 @@
                 h5 {
                     color: #ffffff;
                     text-align: left;
-                    font-size: 1rem;
+                    font-size: 1.2rem;
                     font-weight: 300;
                     margin: 0;
-                    width: 360px;
+                    width: 370px;
                     text-shadow: 1px 1px 1px #000000;
                     span{
-                        font-size: 2rem;
+                        font-size: 2.2rem;
                         font-weight: 300;
-                        text-shadow: 1px 1px 1px #000000;
+                        text-shadow: 1px 1px 3px #000000;
                     }
                 }
             }
@@ -157,7 +196,7 @@
                 margin: 0.5rem 0;
                 font-size: 1.1rem;
                 font-weight: 300;
-                width: 220px;
+                max-width: 240px;
                 text-align: center;
             }
             button {
@@ -191,11 +230,11 @@
     #contact {
         flex-direction: row-reverse;
         justify-content: space-around;
-        height: 550px;
+        height: 600px;
         .contact-image {
-            margin-top: 4.5rem;
+            margin-top: 2rem;
             img {
-                width: 400px;
+                width: 300px;
                 margin-bottom: 5rem;
             }
             .image-icons {
@@ -212,15 +251,15 @@
                 h5 {
                     color: #ffffff;
                     text-align: left;
-                    font-size: 1.6rem;
+                    font-size: 1.2rem;
                     font-weight: 300;
                     margin: 0;
-                    width: 460px;
+                    width: 370px;
                     text-shadow: 1px 1px 1px #000000;
                     span{
-                        font-size: 2.6rem;
+                        font-size: 2.2rem;
                         font-weight: 300;
-                        text-shadow: 1px 1px 1px #000000;
+                        text-shadow: 1px 1px 3px #000000;
                     }
                 }
             }
@@ -228,9 +267,9 @@
                 color: #ffffff;
                 text-shadow: 1px 1px 1px #000000;
                 margin: 0.5rem 0;
-                font-size: 1.4rem;
+                font-size: 1.1rem;
                 font-weight: 300;
-                width: 320px;
+                max-width: 240px;
                 text-align: center;
             }
             button {
@@ -238,21 +277,20 @@
                 background-color: transparent;
                 box-shadow: 1px 1px #000000;
                 border-radius: 20px;
-                width: 7rem;
-                height: 2.5rem;
+                width: 5.5rem;
+                height: 2rem;
                 a {
                     color: #ffffff;
                     text-shadow: 1px 1px 1px #000000;
                     text-decoration: none;
-                    font-size: 1rem;
-                    padding: 0.5rem 0.9rem;
+                    font-size: 0.8rem;
+                    padding: 0;
                 }
             }
             button:hover {
                 background-color: #ffffff;
                 a {
-                    color: #000000;
-                    text-shadow: none;
+                    color: #686868;
                 }
             }
         }
@@ -265,11 +303,11 @@
     #contact {
         flex-direction: row-reverse;
         justify-content: space-around;
-        height: 750px;
+        height: 650px;
         .contact-image {
-            margin-top: 4rem;
+            margin-top: 2rem;
             img {
-                width: 550px;
+                width: 450px;
                 margin-bottom: 5rem;
             }
             .image-icons {
@@ -286,47 +324,46 @@
                 h5 {
                     color: #ffffff;
                     text-align: left;
-                    font-size: 2.6rem;
+                    font-size: 2.2rem;
                     font-weight: 300;
                     margin: 0;
-                    max-width: 660px;
+                    width: 650px;
                     text-shadow: 1px 1px 1px #000000;
                     span{
                         font-size: 3.8rem;
                         font-weight: 300;
-                        text-shadow: 1px 1px 1px #000000;
+                        text-shadow: 1px 1px 3px #000000;
                     }
                 }
             }
             p {
                 color: #ffffff;
                 text-shadow: 1px 1px 1px #000000;
-                margin: 1rem 0;
-                font-size: 2rem;
+                margin: 0 0 1rem 0;
+                font-size: 1.8rem;
                 font-weight: 300;
-                width: 420px;
+                max-width: 400px;
                 text-align: center;
             }
             button {
                 border: solid 0.1rem #ffffff;
                 background-color: transparent;
                 box-shadow: 1px 1px #000000;
-                border-radius: 20px;
+                border-radius: 25px;
                 width: 10rem;
-                height: 3rem;
+                height: 3.2rem;
                 a {
                     color: #ffffff;
                     text-shadow: 1px 1px 1px #000000;
                     text-decoration: none;
-                    font-size: 1.4rem;
-                    padding: 0.5rem 0.9rem;
+                    font-size: 1.2rem;
+                    padding: 0;
                 }
             }
             button:hover {
                 background-color: #ffffff;
                 a {
-                    color: #000000;
-                    text-shadow: none;
+                    color: #686868;
                 }
             }
         }
