--- a/src/style/localization/localization.scss
+++ b/src/style/localization/localization.scss
@@ -8,26 +8,28 @@
         color: #000000;
         font-size: 1.5rem;
         font-weight: 300;
-        margin-top: 5rem;
+        margin-top: 8rem;
     }
-    .container {
+    .localization-iframe {
         display: flex;
         flex-direction: column;
-        .iframeContainer {
-            width: 100%;
+        align-items: center;
+        .iframe-container {
+            width: 272px;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 4rem;
+            margin-top: 5rem;
             margin-bottom: 2rem;
             .iframe {
-                height: 350px;
-                width: 100%;
+                height: 170px;
+                width: 272px;
                 border: none;
                 z-index: 0;
+                border-radius: 20px;
             }
         }
-        .localizationData {
+        .iframe-data {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -38,31 +40,55 @@
                 margin: 1.5rem 1rem 0 1rem;
                 font-size: 0.9rem;
                 font-weight: 300;
+                max-width: 272px;
             }
         }
     }
 }
 @media (min-width: 481px) and (max-width: 768px) {
     #localization {
-        height: 1150px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-image: url('../../assets/backgrounds/Backg1.png');
+        height: 1000px;
         h3 {
-            font-size: 3rem;
-            margin-top: 10rem;
-            text-shadow: 1px 1px 1px #cacaca;
             color: #000000;
+            font-size: 3rem;
+            font-weight: 300;
+            margin-top: 14rem;
         }
-        .container {
-            width: 480px;
-            margin-top: 2rem;
-            .iframeContainer .iframe {
-                border-radius: 50px;
-                height: 350px;
-                width: 470px;
+        .localization-iframe {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .iframe-container {
+                width: 400px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-top: 5rem;
+                margin-bottom: 2rem;
+                .iframe {
+                    height: 300px;
+                    width: 400px;
+                    border: none;
+                    z-index: 0;
+                    border-radius: 20px;
+                }
             }
-            .localizationData {
+            .iframe-data {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                margin: 0 0 2rem 0;
                 p {
-                    font-size: 1.5rem;
-                    width: 480px;
+                    margin: 1.5rem 1rem 0 1rem;
+                    font-size: 1.2rem;
+                    font-weight: 300;
+                    max-width: 400px;
                 }
             }
         }
@@ -70,42 +96,47 @@
 }
 @media (min-width: 769px) and (max-width: 1024px) {
     #localization {
+        display: flex;
         flex-direction: column;
-        height: 850px;
+        align-items: center;
+        background-image: url('../../assets/backgrounds/Backg1.png');
+        height: 1150px;
         h3 {
             color: #000000;
-            font-size: 1.5rem;
+            font-size: 2.8rem;
             font-weight: 300;
-            margin-top: 8rem;
-            margin-bottom: 2rem;
-        } 
-        .container {
-            flex-direction: row;
-            .iframeContainer {
-                width: 550px;
-                margin: 3rem 0;
+            margin-top: 10rem;
+        }
+        .localization-iframe {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .iframe-container {
+                width: 600px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-top: 5rem;
+                margin-bottom: 3rem;
                 .iframe {
-                    height: 400px;
-                    width: 400px;
-                    border-radius: 50px;
+                    height: 350px;
+                    width: 600px;
+                    border: none;
                     z-index: 0;
+                    border-radius: 25px;
                 }
             }
-            .localizationData {
+            .iframe-data {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
                 text-align: center;
-                margin: 0;
                 p {
-                    margin: 1rem;
-                    font-size: 1.5rem;
+                    margin: 2rem 1rem 0rem 1rem;
+                    font-size: 1.6rem;
                     font-weight: 300;
-                    width: auto;
+                    max-width: 600px;
                 }
             }
         }
@@ -113,43 +144,47 @@
 }
 @media (min-width: 1025px) and (max-width: 1440px) {
     #localization {
+        display: flex;
         flex-direction: column;
-        height: 850px;
+        align-items: center;
+        background-image: url('../../assets/backgrounds/Backg1.png');
+        height: 1150px;
         h3 {
             color: #000000;
-            font-size: 1.5rem;
+            font-size: 2.8rem;
             font-weight: 300;
-            margin-top: 8rem;
-            margin-bottom: 2rem;
-        } 
-        .container {
-            flex-direction: row;
-            .iframeContainer {
-                width: 500px;
-                margin: 3rem 0 0 1rem;
+            margin-top: 10rem;
+        }
+        .localization-iframe {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .iframe-container {
+                width: 600px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-top: 5rem;
+                margin-bottom: 3rem;
                 .iframe {
-                    height: 450px;
-                    width: 450px;
-                    border-radius: 50px;
+                    height: 350px;
+                    width: 600px;
+                    border: none;
                     z-index: 0;
+                    border-radius: 25px;
                 }
             }
-            .localizationData {
+            .iframe-data {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
                 text-align: center;
-                margin: 0;
-                width: 500px;
                 p {
-                    margin: 1rem;
-                    font-size: 1.5rem;
+                    margin: 2rem 1rem 0rem 1rem;
+                    font-size: 1.6rem;
                     font-weight: 300;
-                    width: auto;
+                    max-width: 600px;
                 }
             }
         }
@@ -157,43 +192,47 @@
 }
 @media (min-width: 1441px) {
     #localization {
+        display: flex;
         flex-direction: column;
-        height: 1450px;
+        align-items: center;
+        background-image: url('../../assets/backgrounds/Backg1.png');
+        height: 1500px;
         h3 {
             color: #000000;
-            font-size: 2rem;
+            font-size: 2.8rem;
             font-weight: 300;
             margin-top: 15rem;
-            margin-bottom: 5rem;
-        } 
-        .container {
-            flex-direction: row;
-            .iframeContainer {
-                width: 800px;
-                margin: 3rem 0 0 1rem;
+        }
+        .localization-iframe {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .iframe-container {
+                width: 700px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-top: 10rem;
+                margin-bottom: 3rem;
                 .iframe {
-                    height: 750px;
-                    width: 750px;
-                    border-radius: 50px;
+                    height: 400px;
+                    width: 700px;
+                    border: none;
                     z-index: 0;
+                    border-radius: 25px;
                 }
             }
-            .localizationData {
+            .iframe-data {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
                 text-align: center;
-                margin: 0;
-                width: auto;
                 p {
-                    margin: 1rem;
-                    font-size: 2rem;
+                    margin: 2rem 1rem 0rem 1rem;
+                    font-size: 2.2rem;
                     font-weight: 300;
-                    max-width: 650px;
+                    max-width: 640px;
                 }
             }
         }
