--- a/src/style/navbar/navbar.scss
+++ b/src/style/navbar/navbar.scss
@@ -2,63 +2,7 @@
     position: fixed;
     z-index: 2;
     .navbar-desktop {
-        height: 4rem;
-        width: 100vw;
-        background-image: url("../../assets/backgrounds/navbar/BackNavbar.png");
         display: none;
-        flex-direction: row;
-        align-items: center;
-        .navbar-dekstop-logo {
-            width: 50px;
-            height: 50px;
-            margin-left: 5rem;
-        }
-        .navbar-desktop-elements {
-            display: flex;
-            flex-direction: row;
-            margin-left: 3rem;
-            li {
-                margin: 0 1rem;
-                list-style: none;
-                a {
-                    text-decoration: none;
-                    color: #ffffff;
-                    font-size: 1rem;
-                    font-weight: 300;
-                }
-                a:hover {
-                    text-decoration: underline;
-                }
-                .dropdown {
-                    position: relative;
-                    display: inline-block;
-                    background-color: transparent;
-                    border: none;
-                    font-size: 1rem;
-                    font-weight: 300;
-                    color: #ffffff;
-                    cursor: pointer;
-                }
-                .dropdown-content {
-                display: none;
-                flex-direction: column;
-                position: absolute;
-                background-color: #f9f9f9;
-                min-width: 160px;
-                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                padding: 12px 16px;
-                z-index: 1;
-                a {
-                    color: #000000;
-                    padding: 0.5rem 1rem;
-                }
-                }
-                .dropdown:hover  {
-                    text-decoration: underline;
-                }
-
-            }
-        }
     }
     .navbar-mobile {
         width: 100%;
@@ -79,7 +23,7 @@
                 background-color: transparent;
                 border: none;
                 .header-menu-button-icon {
-                    margin-right: 1.2rem;
+                    margin: 0 1.2rem;
                     color: #ffffff;
                     font-size: 28px;
                 }
@@ -88,36 +32,28 @@
         .navbar-mobile-menu {
             position: absolute;
             top: 0;
-            display: block;
+            left: 0;
             height: 100vh;
-            width: 100vw;
-            background-color: #00000065;
+            width: calc(100% - 4.15rem);
+            background-image: url("../../assets/backgrounds/Backg1.png");
+            border-radius: 0 0 20px 0;
+            z-index: 2;
             visibility: hidden;
             overflow-y: auto;
-            .menu-background {
-                position: absolute;
-                right: 0;
-                height: 650px;
-                width: 75%;
-                background-image: url("../../assets/backgrounds/Backg1.png");
-                border-radius: 0 0 0 20px;
-                .menu-close {
-                    display: flex;
-                    justify-content: flex-end;
-                    width: 100%;
-                    .menu-close-icon {
-                        font-size: 2rem;
-                        margin: 1rem 1rem 0 0;
-                    }
+            nav {
+                .header-logo {
+                    margin: 1rem 0 0 2rem;
+                    width: 50px;
+                    color: #000000;
                 }
                 .menu-itens {
                     display: flex;
                     flex-direction: column;
                     align-items: flex-start;
-                    margin-top: 3rem;
+                    margin-top: 2rem;
                     li {
                         list-style: none;
-                        margin: 1rem 2rem;
+                        margin: 1.5rem 0 1.5rem 2rem;
                         width: calc(100% - 2rem);
                         border-bottom: solid 0.1rem #a9a9a9;
                         a {
@@ -126,6 +62,45 @@
                             text-decoration: none;
                             font-weight: 300;
                         }
+                        .dropdown-button-mobile {
+                            border: none;
+                            background-color: transparent;
+                            color: #000000;
+                            font-size: 1.2rem;
+                            text-decoration: none;
+                            font-weight: 300;
+                        }
+                        .dropdown-content-mobile {
+                            display: none;
+                            flex-direction: column;
+                            margin: 0.5rem 0;
+                            a {
+                                margin: 0.5rem 0 0 0.5rem;
+                                font-size: 1rem;
+                            }
+                        }
+                    }
+                }
+                .buttons {
+                    margin: 5rem 2rem 0 2rem;
+                    display: flex;
+                    flex-direction: column;
+                    .login {
+                        padding: 0.5rem;
+                        border-radius: 10px;
+                        font-size: 1rem;
+                        font-weight: 300;
+                        background-color: transparent;
+                        margin-bottom: 1rem;
+                    }
+                    .register {
+                        padding: 0.5rem;
+                        border-radius: 10px;
+                        font-size: 1rem;
+                        font-weight: 300;
+                        background-color: #ffffff;
+                        border: none;
+                        margin-bottom: 1rem;
                     }
                 }
             }
@@ -142,24 +117,63 @@
                     width: 80px;
                 }
                 .header-menu-button .header-menu-button-icon {
-                    margin-right: 2rem;
+                    margin: 0 2rem;
                     font-size: 4rem;
                 }
             }
-            .navbar-mobile-menu .menu-background {
-                height: 1200px;
-                width: 480px;
-                border-radius: 0 0 0 20px;
-                .menu-close .menu-close-icon {
-                    font-size: 4rem;
-                    margin: 2rem 2rem 0 0;
-                }
-                .menu-itens {
-                    margin-top: 4rem;
-                    li {
-                        margin: 2rem 2rem;
-                        a {
-                            font-size: 2.5rem;
+            .navbar-mobile-menu {
+                height: 100vh;
+                width: calc(100% - 8rem);
+                border-radius: 0 0 20px 0;
+                nav {
+                    .header-logo {
+                        width: 80px;
+                    }
+                    .menu-itens {
+                        margin-top: 2rem;
+                        li {
+                            margin: 2rem 2rem;
+                            a {
+                                font-size: 2rem;
+                            }
+                            .dropdown-button-mobile {
+                                border: none;
+                                background-color: transparent;
+                                color: #000000;
+                                font-size: 2rem;
+                                text-decoration: none;
+                                font-weight: 300;
+                            }
+                            .dropdown-content-mobile {
+                                display: none;
+                                flex-direction: column;
+                                margin: 0.5rem 0;
+                                a {
+                                    margin: 1rem 0 0 0.5rem;
+                                    font-size: 1.6rem;
+                                }
+                            }
+                        }
+                    }
+                    .buttons {
+                        margin: 5rem 2rem 0 2rem;
+                        display: flex;
+                        flex-direction: column;
+                        .login {
+                            padding: 0.5rem;
+                            border-radius: 10px;
+                            font-size: 1.8rem;
+                            font-weight: 300;
+                            background-color: transparent;
+                            margin-bottom: 1rem;
+                        }
+                        .register {
+                            padding: 0.5rem;
+                            border-radius: 10px;
+                            font-size: 1.8rem;
+                            font-weight: 300;
+                            background-color: #ffffff;
+                            border: none;
                         }
                     }
                 }
@@ -170,7 +184,63 @@
 @media (min-width: 769px) and (max-width: 1024px) {
     #navbar {
         .navbar-desktop {
+            height: 4rem;
+            width: 100vw;
+            background-image: url("../../assets/backgrounds/navbar/BackNavbar.png");
             display: flex;
+            flex-direction: row;
+            align-items: center;
+            .navbar-dekstop-logo {
+                width: 50px;
+                height: 50px;
+                margin-left: 5rem;
+            }
+            .navbar-desktop-elements {
+                display: flex;
+                flex-direction: row;
+                margin-left: 3rem;
+                li {
+                    margin: 0 0.8rem;
+                    list-style: none;
+                    a {
+                        text-decoration: none;
+                        color: #ffffff;
+                        font-size: 1.2rem;
+                        font-weight: 300;
+                    }
+                    a:hover {
+                        text-decoration: underline;
+                    }
+                    .dropdown-button-desktop {
+                        position: relative;
+                        display: inline-block;
+                        background-color: transparent;
+                        border: none;
+                        font-size: 1.2rem;
+                        font-weight: 300;
+                        color: #ffffff;
+                        cursor: pointer;
+                    }
+                    .dropdown-content-desktop {
+                    display: none;
+                    flex-direction: column;
+                    position: absolute;
+                    background-color: #f9f9f9;
+                    min-width: 160px;
+                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                    padding: 12px 16px;
+                    z-index: 1;
+                    a {
+                        color: #000000;
+                        padding: 0.5rem 1rem;
+                    }
+                    }
+                    .dropdown:hover  {
+                        text-decoration: underline;
+                    }
+    
+                }
+            }
         }
         .navbar-mobile {
             display: none;
@@ -181,39 +251,61 @@
     #navbar {
         .navbar-desktop {
             height: 5rem;
+            width: 100vw;
+            background-image: url("../../assets/backgrounds/navbar/BackNavbar.png");
             display: flex;
+            flex-direction: row;
+            align-items: center;
             .navbar-dekstop-logo {
-                width: 60px;
-                height: 60px;
+                width: 50px;
+                height: 50px;
                 margin-left: 5rem;
             }
-            .navbar-desktop-elements li {
-                list-style: none;
-                a {
-                    font-size: 1.2rem;
+            .navbar-desktop-elements {
+                display: flex;
+                flex-direction: row;
+                margin-left: 3rem;
+                li {
+                    margin: 0 0.8rem;
+                    list-style: none;
+                    a {
+                        text-decoration: none;
+                        color: #ffffff;
+                        font-size: 1.2rem;
+                        font-weight: 300;
+                    }
+                    a:hover {
+                        text-decoration: underline;
+                    }
+                    .dropdown-button-desktop {
+                        position: relative;
+                        display: inline-block;
+                        background-color: transparent;
+                        border: none;
+                        font-size: 1.2rem;
+                        font-weight: 300;
+                        color: #ffffff;
+                        cursor: pointer;
+                    }
+                    .dropdown-content-desktop {
+                    display: none;
+                    flex-direction: column;
+                    position: absolute;
+                    background-color: #f9f9f9;
+                    min-width: 160px;
+                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                    padding: 12px 16px;
+                    z-index: 1;
+                    a {
+                        color: #000000;
+                        padding: 0.5rem 1rem;
+                    }
+                    }
+                    .dropdown:hover  {
+                        text-decoration: underline;
+                    }
+    
                 }
-                .dropdown {
-
-                    font-size: 1.2rem;
-                }
-                .dropdown-content {
-                display: none;
-                flex-direction: column;
-                position: absolute;
-                background-color: #f9f9f9;
-                min-width: 160px;
-                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                padding: 12px 16px;
-                z-index: 1;
-                a {
-                    color: #000000;
-                    padding: 0.5rem 1rem;
-                }
-                }
-                .dropdown:hover  {
-                    text-decoration: underline;
-                }
-
             }
         }
         .navbar-mobile {
@@ -225,39 +317,62 @@
     #navbar {
         .navbar-desktop {
             height: 8rem;
+            width: 100vw;
+            background-image: url("../../assets/backgrounds/navbar/BackNavbar.png");
             display: flex;
+            flex-direction: row;
+            align-items: center;
             .navbar-dekstop-logo {
-                width: 80px;
-                height: 80px;
-                margin-left: 10rem;
+                width: 90px;
+                height: 90px;
+                margin-left: 5rem;
             }
-            .navbar-desktop-elements li {
-                list-style: none;
-                a {
-                    font-size: 2rem;
+            .navbar-desktop-elements {
+                display: flex;
+                flex-direction: row;
+                margin-left: 3rem;
+                li {
+                    margin: 0 1rem;
+                    list-style: none;
+                    a {
+                        text-decoration: none;
+                        color: #ffffff;
+                        font-size: 2rem;
+                        font-weight: 300;
+                    }
+                    a:hover {
+                        text-decoration: underline;
+                    }
+                    .dropdown-button-desktop {
+                        position: relative;
+                        display: inline-block;
+                        background-color: transparent;
+                        border: none;
+                        font-size: 2rem;
+                        font-weight: 300;
+                        color: #ffffff;
+                        cursor: pointer;
+                    }
+                    .dropdown-content-desktop {
+                    display: none;
+                    flex-direction: column;
+                    position: absolute;
+                    background-color: #f9f9f9;
+                    min-width: 160px;
+                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                    padding: 12px 16px;
+                    z-index: 1;
+                    a {
+                        font-size: 1.9rem;
+                        color: #000000;
+                        padding: 1rem;
+                    }
+                    }
+                    .dropdown:hover  {
+                        text-decoration: underline;
+                    }
+    
                 }
-                .dropdown {
-
-                    font-size: 2rem;
-                }
-                .dropdown-content {
-                display: none;
-                flex-direction: column;
-                position: absolute;
-                background-color: #f9f9f9;
-                min-width: 160px;
-                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                padding: 12px 16px;
-                z-index: 1;
-                a {
-                    color: #000000;
-                    padding: 0.5rem 1rem;
-                }
-                }
-                .dropdown:hover  {
-                    text-decoration: underline;
-                }
-
             }
         }
         .navbar-mobile {
